syntax = "proto3";

package user;

service UserService {
    rpc GetUser (GetUserRequest) returns (UserResponse);
    rpc GetUsers (GetUsersRequest) returns (UsersResponse);
    rpc SearchUsers (SearchUsersRequest) returns (UsersResponse);
}

message User {
    int32 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    float height = 5;
    bool married = 6;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUsersRequest {
    repeated int32 ids = 1;
}

message SearchUsersRequest {
    string city = 1;
    int64 phone = 2;
    bool married = 3;
}

message UserResponse {
    User user = 1;
}

message UsersResponse {
    repeated User users = 1;
}
